# AdaptiveScraper

./: README.md  pyproject.toml
src/: getpage.py
tests/: __init__.py
