[tool.poetry]
name = "adaptivescraper"
version = "0.1.0"
description = ""
authors = ["Ikey168 <122488906+Ikey168@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.37.2"
torch = "^2.2.0"
huggingface-cli = "^0.1"
accelerate = "^0.26.1"
requests = "^2.31.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
